front-end/src/pages/Home.scss
@import '../assets/utils/_colors.scss';
.home {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    min-height: 100%;
  
    &__firstPage {
      display: flex; 
      justify-content: space-between;
      height: 80vh;
    }
  
    &__textContainer {
      width: 100%;
    }
  
    &__header {
      font-size: 9vw;
      color: $rose_quartz;
      margin: 0px;
    }
  
    &__span {
      color: $rose_quartz;
      font-weight: bold;
    }

    &__quote {
        color: $snow_white;
        width: 50%;
        margin: auto;
        margin-top: 20px;
    }
  
    // &__splashContainer {
    //     display: inline-block;
    // }
  
    &__splashImage {
      width: 5%;
      height: auto;
    }

    &__homeButtonContainer {
        display: flex;
        align-items: center;
        justify-content: center;
        margin: auto;
    }

    &__buttonContainer {
        display: inline-block;
    }
  
    &__text {
      color: $snow_white;
      font-size: x-large;
    }

    a {
        text-decoration: none;
        display: inline-block;
    }

    &__startButton {
        display: flex;
        background-color: $snow_white;
        margin: 20px 0px 20px 0px;
        border-radius: 20px;
        border: none;
        height: 3em;
        min-width: 25%;
        overflow: visible;
        padding: 20px 40px;
        align-items: center;
        cursor: pointer;
        span {
            font-size: large;
            font-family: Verdana, Geneva, Tahoma, sans-serif;
            font-weight: bolder;
            color: $cherry;
            margin: 0px 10px;
            text-decoration: none;
        }
    }

    &__startButton:hover {
      background-color: $dim_snow_white;
    }

    hr {
        width: 100%;
    }
  
    &__nextPage {
        margin-top: 20px;
        color: $snow_white;
        // height: 80vh;
        display: inline-block;
        text-align: center;
        
        &__gridContainer {
            display: grid;
            grid-template-columns: repeat(3, 1fr);
            align-items: center;
        }

        &__gridCell {
          display: flex;
          flex-direction: column;
          min-height: 400px;
          align-items: center;
          margin: 10px;
          padding: 10px;
          text-align: center;
          border: 1px solid $cherry;
          border-radius: 20px;

          p {
            width: 70%;
          }
        }

        &__summary {
          width: 40%;
          margin: auto;
          margin-top: 3%;
          padding: 10px;
          border: 1px solid $cherry;
          border-radius: 20px;
          box-shadow: 1px black;
          font-family: Verdana, Geneva, Tahoma, sans-serif;


        }
        
        h1, h3 {
          color: $rose_quartz;
        }

        h1 {
          font-size: xx-large;
        }
      
        img {
          max-height: 200px;
          width: auto;
          border-radius: 30px;
        }
    }
  }
  
  // @media screen and (max-width: 690px) {
//   .home-container {
//     grid-template-columns: repeat(1, 1fr);
//     margin-left: 25px;
//     margin-right: 25px;
//     gap: 0%;
//   }
//   .home-subcontainer {
//     margin-top: 0%;
//     padding: 0%;
//   }
//   .home-container img {
//     margin-top: 0%;
//   }
// }

